@@ -1,4 +1,4 @@
-# $Id: funcname.tab,v 1.9 2002/06/01 16:50:16 ukai Exp $
+# $Id: funcname.tab,v 1.10 2002/06/01 17:09:05 ukai Exp $
 # macro name	function name
 #----------------------------
 @@@		nulcmd
@@ -36,7 +36,6 @@ GOTO_RELATIVE	gorURL
 HELP		ldhelp
 HISTORY		ldHist
 INFO		pginfo
-INIT_MAILCAP	initMailcap
 INTERRUPT	susp
 ISEARCH		isrchfor
 ISEARCH_BACK	isrchbak
@@ -91,6 +90,7 @@ QUIT		qquitfm
 READ_SHELL	readsh
 REDRAW		rdrwSc
 REG_MARK	reMark
+REINIT		reinit
 RELOAD		reload
 RIGHT		col1R
 SAVE		svSrc
