@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.42 2002/06/01 16:50:16 ukai Exp $ */
+/* $Id: proto.h,v 1.43 2002/06/01 17:09:05 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -116,6 +116,7 @@ extern void setAlarmEvent(int sec, short status, int cmd, void *data);
 #else
 #define setAlarm nulcmd
 #endif
+extern void reinit(void);
 extern void defKey(void);
 extern int currentLn(Buffer *buf);
 extern void tmpClearBuffer(Buffer *buf);
